
 - (CONCATENATE 'STRING ...) does no longer have an ad-hoc limit in the number
   of strings.

* Unicode:

 - MAKE-STRING only allowed :ELEMENT-TYPE to be one of CHARACTER, BASE-CHAR, or
   STANDARD-CHAR.

 - The FFI will signal a type error when converting extended characters to
   the C types "char" or "unsigned char".

* Other visible changes:

 - EXT:PROCESS-COMMAND-ARGS now allows for a default rule.

 - Variable EXT:*HELP-MESSAGE* and EXT:+DEFAULT-COMMAND-ARG-RULES+ exported.

 - C:BUILD-PROGRAM now uses a unique prefix for the initialization function,
   init_ECL_PROGRAM, to avoid collisions when both the program and a component
   have the same name:
	(C:BUILD-PROGRAM "ls" :lisp-files '("ls.o"))

 - FFI:CLINES is no longer restricted to appear as a toplevel form. The
   following code is thus valid:
	(defun c-sin (x)
	  (ffi:clines "#include <math.h>")
	  (ffi:c-inline (x) (:double) :double "sin(#0)" :one-liner t))

 - Minimized the number of headers included by ecl/ecl.h. In particular,
   stdio.h, inittypes.h and pthread.h are no longer used.

 - When a compiler finds a literal standard object, the load and initialization
   forms it generates are now closer to the first reference to the object. This
   allows to have, in the same file, a class definition and a constant which
   is an object of that class.

 - Support for hierarchical package names, as in Allegro Common-Lisp.

 - C functions which disappear: si_set_compiled_function_name(),
   si_extended_string_concatenate()

 - Lisp functions which disappear: si:set-compiled-function-name,
   si:extended-string-concatenate.

 - New C functions: ecl_stream_to_handle(), ecl_base_char_code().

 - Functions renamed: backup_fopen() -> ecl_backup_fopen()
   char_code() -> ecl_char_code()

* Contributed code:

 - New examples: cmdline/ls.lsp, ffi/uffi.lsp, ffi/cffi.lsp

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***