@@ -1430,6 +1430,7 @@ extern void FEcircular_list(cl_object x) /*__attribute__((noreturn))*/;
 extern void FEtype_error_index(cl_object seq, cl_object ndx) /*__attribute__((noreturn))*/;
 extern void FEtype_error_string(cl_object x) /*__attribute__((noreturn))*/;
 extern void FEdivision_by_zero(cl_object x, cl_object y) /*__attribute__((noreturn))*/;
+extern cl_object ecl_type_error(cl_object function, const char *place, cl_object o, cl_object type);
 
 /* unixfsys.c */
 
