@@ -452,9 +452,9 @@ under certain conditions; see file 'Copyright' for details.")
   (cond ((null c)
 	 (if (eq name :newline)		; special handling for Newline.
 	     nil
-	   `(tpl-unknown-command ',name)))
-    ((eq (third c) :restart)
-     `(invoke-restart-interactively ,(second c))) 
+	     `(tpl-unknown-command ',name)))
+	((eq (third c) :restart)
+	 `(invoke-restart-interactively ,(second c))) 
 	((eq (third c) :eval)
 	 `(,(second c) . ,(tpl-parse-forms line)))
 	((eq (third c) :string)
@@ -863,7 +863,6 @@ package."
 ))
 
 (defun default-debugger (condition)
-  (declare (si::c-local))
   (unless *break-enable*
     (throw *quit-tag* nil))
   (let*((*standard-input* *debug-io*)
@@ -876,47 +875,38 @@ package."
 	(*break-env* nil))
     (when (listen *debug-io*)
       (clear-input *debug-io*))
-    (princ *break-message*)
-    ; restart commands
-    ;
-    (let ((commands (adjoin (restart-commands condition) (adjoin break-commands *tpl-commands*))))
-      ;(print commands)
-      (tpl :commands commands))))
+    ;; Like in SBCL, the error message is output through *error-output*
+    ;; The rest of the interaction is performed through *debug-io*
+    (princ *break-message* *error-output*)
+    ;; Here we show a list of restarts and invoke the toplevel with
+    ;; an extended set of commands which includes invoking the associated
+    ;; restarts.
+    (let* ((restarts (compute-restarts condition))
+	   (restart-commands (list "Restart commands")))
+      (format t (if restarts "Available restarts:~%" "No restarts available.~%"))
+      (loop for restart in restarts
+	 and i from 1
+	 do (let ((user-command (format nil "r~D" i))
+		  (name (format nil "~@[(~A) ~]" (restart-name restart)))
+		  (helpstring (princ-to-string restart)))
+	      (push (list
+		     (list (intern (string-upcase user-command) :keyword))
+		     restart :restart
+		     (format nil ":~A~16T~A~24T~A" user-command helpstring name)
+		     (format nil ":~A~48T~A~& ~&~A~A" (string-downcase user-command) "[Restart command]" name helpstring))
+		    restart-commands)
+	      (format t "~D. ~A~A~%" i name restart)))
+      (tpl :commands
+	   (adjoin (nreverse restart-commands)
+		   (adjoin break-commands *tpl-commands*))))))
 
-(defun restart-commands (condition)
-  "Builds a list of restart commands that can be invoked from the debugger"
-  `("Restart commands"
-    ,@(mapcar 
-      (lambda (iterator-restart)
-        (let*
-          ((iterator (first iterator-restart))
-           (restart (second iterator-restart))
-           (user-command (format nil "r~A" iterator))
-           (helpstring (princ-to-string restart)))
-          (list 
-             (list (intern (string-upcase user-command) :keyword))
-             restart :restart
-             (format nil ":~A~16T~A~24T~A" user-command helpstring (string (restart-name restart)) )
-             (format nil ":~A~48T~A~& ~&~A~&Restarts program using~&(INVOKE-RESTART-INTERACTIVELY '~A)" (string-downcase user-command) "[Restart command]" helpstring (restart-name restart) ))))
-      (enumerate (compute-restarts condition)))))
-
-(defun enumerate (list)
-  "Given a list of (a b c) returns a list of ((1 a) (2 b) (3 c))"  
-  (declare (si::c-local))
-  (let
-    ((iterator 0)
-     (result nil))
-    (dolist (item list)
-      (incf iterator)
-      (setf result (cons (list iterator item) result)))
-    (reverse result)))
-      
 (defun invoke-debugger (condition)
   (when *debugger-hook*
     (let* ((old-hook *debugger-hook*)
 	   (*debugger-hook* nil))
       (funcall old-hook condition old-hook)))
-  (default-debugger condition))
+  (locally (declare (notinline default-debugger))
+    (default-debugger condition)))
 
 (defun safe-eval (form env err-value)
   (catch 'si::protect-tag
